removed non-functional elements

--- a/src/dandiannotations/webapp/templates/success.html
+++ b/src/dandiannotations/webapp/templates/success.html
@@ -21,13 +21,9 @@
                 </div>
                 
                 <div class="mt-4">
-                    <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg me-3">
+                    <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">
                         <i class="fas fa-plus me-2"></i>Submit Another Resource
                     </a>
-                    
-                    <button class="btn btn-outline-secondary btn-lg" onclick="window.close()">
-                        <i class="fas fa-times me-2"></i>Close
-                    </button>
                 </div>
             </div>
         </div>
