--- a/src/dandiannotations/webapp/templates/dandiset_resources.html
+++ b/src/dandiannotations/webapp/templates/dandiset_resources.html
@@ -17,9 +17,11 @@
                     <a href="{{ url_for('submit_form') }}" class="btn btn-primary">
                         <i class="fas fa-plus"></i> Add New Resource
                     </a>
+                    {% if is_authenticated %}
                     <a href="{{ url_for('moderate') }}" class="btn btn-outline-secondary">
                         <i class="fas fa-gavel"></i> Moderate
                     </a>
+                    {% endif %}
                 </div>
             </div>
 
@@ -134,6 +136,16 @@
                                         <strong>Contributor:</strong> {{ resource.annotation_contributor.name }}<br>
                                         <strong>Submitted:</strong> {{ resource.annotation_date[:10] }}
                                     </small>
+                                    
+                                    {% if is_authenticated %}
+                                    <!-- Moderator Actions -->
+                                    <div class="mt-3 d-grid">
+                                        <a href="{{ url_for('endorse_submission', dandiset_id=dandiset_id, filename=resource._submission_filename) }}" 
+                                           class="btn btn-success btn-sm">
+                                            <i class="fas fa-check"></i> Endorse Submission
+                                        </a>
+                                    </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
