--- a/src/dandiannotations/webapp/templates/homepage.html
+++ b/src/dandiannotations/webapp/templates/homepage.html
@@ -16,9 +16,11 @@
                         <a href="{{ url_for('submit_form') }}" class="btn btn-light btn-lg">
                             <i class="fas fa-plus"></i> Submit New Resource
                         </a>
+                        {% if is_authenticated %}
                         <a href="{{ url_for('moderate') }}" class="btn btn-outline-light btn-lg">
                             <i class="fas fa-gavel"></i> Moderate Submissions
                         </a>
+                        {% endif %}
                         <a href="{{ url_for('how_it_works') }}" class="btn btn-outline-light btn-lg">
                             <i class="fas fa-question-circle"></i> How It Works
                         </a>
