--- a/src/dandiannotations/webapp/templates/moderation.html
+++ b/src/dandiannotations/webapp/templates/moderation.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% from 'pagination.html' import render_pagination %}
 
 {% block content %}
 <div class="container-fluid">
@@ -46,6 +47,9 @@
                         <i class="fas fa-clock text-warning"></i> 
                         Pending Community Submissions
                     </h3>
+                    
+                    <!-- Pagination (top) -->
+                    {{ render_pagination(pagination, 'moderate') }}
                     
                     <div class="row">
                         {% for resource in pending_submissions %}
@@ -107,6 +111,9 @@
                         </div>
                         {% endfor %}
                     </div>
+                    
+                    <!-- Pagination (bottom) -->
+                    {{ render_pagination(pagination, 'moderate') }}
                 </div>
             {% else %}
                 <div class="alert alert-success">
